# SimpleBook

./: .gitignore  AGENTS.md  README.md  activate  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
devtools/: aliases.sh
docs/: Makefile  SCHEMA_VALIDATION.md  TESTING.md  api.rst  conf.py  element_model.rst  element_model_design.md  extraction.rst  extraction_rules.md  generated_docs.rst  index.rst  make.bat  normalization.rst  normalization_rules.md  runbook.md  runbook.rst  schema_validation.rst  testing.rst
scripts/: alltests.py  check-setup.py  debug-epub.py  gen-docs.py  gen-normalization-docs.py  normtest.py  regtest.py  report-body-coverage.py  sample-paragraphs.py  simplebook.py  unpack-all-epubs.py  unpack-epub.py
src/simplebook/: __init__.py  cli.py  config.py  main.py  output_schema.json
tests/: a-a-milne-winnie-the-pooh.json  mary-shelley-frankenstein.json  the-hobbit.json  william-morris-the-house-of-the-wolfings-advanced.json
tests/extraction/: test_body_coverage.py
tests/manual_chunk/: chunking-demo.py  chunking_form.txt
tests/normalization/: cases.yaml  test_cases_yaml.py  test_normalizer_samples.py
tests/normalization/json/: a-a-milne-winnie-the-pooh.json  alexandre-dumas-the-three-musketeers-william-robson.json  arthur-conan-doyle-the-adventures-of-sherlock-holmes.json  arthur-ransome-swallows-and-amazons.json  carolyn-keene-the-hidden-staircase.json  carolyn-keene-the-secret-of-the-old-clock.json  format_markers.json  (+26 more)
tests/unit/: test_all_epubs_schema.py  test_golden_files.py  test_schema_simple.py  test_schema_validator.py
(+31 files in other folders)
