[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simplebook"
version = "0.1.0"
description = "Deterministic EPUB normalizer and tooling."
readme = "docs/src/README.md"
requires-python = ">=3.10"
license = { text = "UNLICENSED" }

dependencies = [
  "ebooklib>=0.18",
  "beautifulsoup4>=4.12.0",
  "lxml>=4.9.0",
  "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "hypothesis>=6.0.0",
  "black>=24.0.0",
  "ruff>=0.5.0",
  "pyright>=1.1.0",
  "tox>=4.0.0",
  "coverage>=7.0.0",
  "pylint>=3.0.0",
]

[project.scripts]
simplebook = "simplebook.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["simplebook"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pyright]
include = ["src"]
pythonVersion = "3.10"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
